--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: #0F0;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header {
+  font-size: 64px;
+  margin: 0;
+  padding-top: 64px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Type-box {
+  margin: 128px;
+  padding: 16px;
+  height: 300px;
+  border: 2px solid #0F0;
+  border-radius: 6px;
+  text-align: left;
+  font-size: 32px;
+  font-family: monospace;
+}
+
+.Cursor {
+  position: relative;
+  top: -4px;
+  animation: Cursor-blink 0.69s infinite;
+}
+
+@keyframes Cursor-blink {
+  0% {
+    opacity: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  49% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
